completed migration to new typesystem internal facilities